argo-cd/app-manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest-app
  namespace: development
  labels:
    app: nest-app
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: nest-app
  template:
    metadata:
      labels:
        app: nest-app
    spec:
      imagePullSecrets:
        - name: potaesm-registry-secret
      containers:
        - name: nest-app
          image: potaesm/nest-app:build-330
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 200m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 500Mi
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 3
          imagePullPolicy: Always
      serviceAccountName: default
