argo-cd/app-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nest-app-svc
  namespace: development
spec:
  selector:
    app: nest-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
